--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,26 +21,22 @@ requirements:
   build:
     - toolchain
     - cmake
-    - python  # [win]
-    - vc 14   # [win and py>=35]
     - cppzmq
     - zeromq
     - cryptopp
-    - util-linux  # [linux]
-    - cling <0.4.0
+    - cling >=0.5,<0.6
     - xeus >=0.6.0,<0.7
     - xtl >=0.2.2,<0.3
     - pugixml
     - cxxopts
   run:
-    - vc 14  # [win and py>=35]
-    - cppzmq  # Even though cppzmq is header-only, it is used at runtime by the interpreted c++
+    - cppzmq             # Even though cppzmq is header-only, it is used at runtime by the interpreted c++
     - xtl  >=0.2.2,<0.3  # Even though xtl is header-only, it is used at runtime by the interpreted c++
     - xeus >=0.6.0,<0.7
     - zeromq
     - cryptopp
-    - util-linux  # [linux]
-    - cling <0.4.0
+    - util-linux         # [linux]
+    - cling  >=0.5,<0.6
 
 test:
   commands:
