--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xeus-cling" %}
-{% set version = "0.1.0" %}
-{% set sha256 = "eb2be37470cfc2a7565744e2013fc6eaa70f339914a23ee6840408767fd89034" %}
+{% set version = "0.2.0" %}
+{% set sha256 = "052f51d786b6db0d8f0d55f79f884e085ad42271642ec7d94491bbd3eb22bc4f" %}
 
 package:
   name: {{ name|lower }}
@@ -29,18 +29,20 @@ requirements:
     - zeromq
     - cryptopp
     - cling >=0.5,<0.6
-    - xeus >=0.10.1,<0.11
+    - xeus >=0.11.0,<0.12
     - xtl >=0.4.0,<0.5
     - pugixml
     - cxxopts >=1.4.1,<2.0
+    - nlohmann_json >=3.1.1,<4.0
   run:
     - cppzmq             # Even though cppzmq is header-only, it is used at runtime by the interpreted c++
     - xtl  >=0.4.0,<0.5  # Even though xtl is header-only, it is used at runtime by the interpreted c++
-    - xeus >=0.10.1,<0.11
+    - xeus >=0.11.0,<0.12
     - zeromq
     - cryptopp
     - util-linux         # [linux]
     - cling  >=0.5,<0.6
+    - nlohmann_json >=3.1.1,<4.0
 
 test:
   commands:
