--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xeus-cling" %}
-{% set version = "0.4.6" %}
-{% set sha256 = "038968367e3ea9d1e6635acb158340d3773b1ff84d4084cad6c287d93449b761" %}
+{% set version = "0.4.7" %}
+{% set sha256 = "713dcbed276882e4f344f465b99c749b99f70128d2e8510dc9256c100612bbc0" %}
 
 package:
   name: {{ name|lower }}
@@ -21,25 +21,25 @@ requirements:
   build:
     - toolchain
     - cmake
-    - cppzmq
-    - zeromq
+    - cppzmq 4.3.0
+    - zeromq 4.2.5
     - cryptopp
     - cling >=0.5,<0.6
-    - xeus >=0.13.0,<0.14
+    - xeus >=0.14.1,<0.15
     - xtl >=0.4.0,<0.5
     - pugixml
     - cxxopts >=2.1.1,<3.0
-    - nlohmann_json >=3.1.1,<4.0
+    - nlohmann_json >=3.1.2,<4.0
     - dirent >=1.21,<2.0        # [win]
   run:
-    - xeus >=0.13.0,<0.14
-    - zeromq
+    - xeus >=0.14.1,<0.15
+    - zeromq 4.2.5
     - cryptopp
     - util-linux                 # [linux]
     - cling  >=0.5,<0.6
-    - cppzmq                     # Even though cppzmq is header-only, it is used at runtime by the interpreted c++
+    - cppzmq 4.3.0               # Even though cppzmq is header-only, it is used at runtime by the interpreted c++
     - xtl  >=0.4.0,<0.5          # Even though xtl is header-only, it is used at runtime by the interpreted c++
-    - nlohmann_json >=3.1.1,<4.0 # Even though nlohmann_json is header-only, it is used at runtime by the interpreted c++
+    - nlohmann_json >=3.1.2,<4.0 # Even though nlohmann_json is header-only, it is used at runtime by the interpreted c++
 
 test:
   commands:
